# forward-forward

./: .gitignore  README.md  main.py  pyproject.toml
forward_forward/: __init__.py  data.py  evaluation.py  layers.py  loss.py  network.py  training.py
